<resources>
    <string name="app_name">Dashboard With Spinners</string>
    <string name="dashboard">Dashboard</string>
    <string name="search_elements">search_elements</string>
    <string name="health">Health</string>
    <string name="finance">Finance</string>
    <string name="goals">Goals</string>
    <string name="comfort">Comfort</string>
    <string name="country_name">Country Name</string>
    <string name="trending">Trending</string>
    <string name="text_input">It\'s a simple digital dashboard app for test purpose</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="Search_elements">Search_elements</string>
</resources>